--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     implementation 'io.coil-kt:coil:1.3.2'
     //Corrutinas
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1")
+
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0")
 }
